--- a/forum-dansk.html
+++ b/forum-dansk.html
@@ -96,7 +96,7 @@
               </p>
             </div>
             <p class="forum-pagenumber">
-              <a href="#"><b>1</b> 2 3 4 5 6 ... 13»</a>
+              <a href="#"><b>1</b> 2 3 4 5 6 ... 13 <b></b>»</a>
             </p>
           </div>
         </div>
