--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -141,8 +141,13 @@
             </p>
             </a>
           </div>
+          <p class="forum-pagenumber">
+            <a href="#"><b>1</b> 2 3 ... 8 <b></b>»</a>
+          </p>
         </div>
+
       </div>
+
       <footer>
         <div class="flex justify-center">
           <div>
