--- a/opgaver.html
+++ b/opgaver.html
@@ -29,6 +29,7 @@
           <h1 id="page-title">
             Opgaver
           </h1>
+          <img class="oploadbuttom" src="assets/images/opload.knap.png" alt="">
         </div>
     </header>
      <div id="wrapper-opgaver">
