opgave-forholdsord.html

--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -37,10 +37,26 @@
           Forholdsord
         </h1>
         <div class="opgave-row1">
-          hej
+          <img src="assets/images/opgave5.png" class="opgave-imgtilpas">
+          <div class="boksleft-download">
+            <h1 class="klasse-titel">
+              0-2. Klasse
+            </h1>
+            <img src="assets/images/download.knap.png" class="downloadico">
+            Downloads
+            <br />
+            <img src="assets/images/kommentarer.png" class="kommentarerico">
+            Kommentarer
+          </div>
         </div>
         <div class="opgave-row2">
-          hej
+          <div class="tekstboks-opgave">
+            <p class="opg-beskrivelse">In nam tempor delectus, ea tempor intellegat voluptaria per. Vel dico etiam equidem ex, ex alia fierent appellantur eam. Et sed eripuit disputando. Commune facilisi reformidans usu ex, pro ad graecis adipisci consequat.</p>
+            <p class="opg-beskrivelse">illum explicari mea. Porro eripuit bonorum eu pri, te possim abhorreant vel. Eam ne porro sonet, oporteat delicata ut sed. Soleat labitur convenire cum ad. Quo id alterum ponderum conceptam, ea mei quot choro probatus. Cetero disputationi vis in.</p>
+            <p class="opg-beskrivelse">Eu debet solet mel. In dicta graeci gubergren est. Eu mea ridens salutandi, sit et prodesset appellantur. At cum graece verear, quas argumentum pro et. Vivendo tacimates indoctum eos an, sea virtute praesent ei, et wisi commune reformidans usu.</p>
+            <p class="opg-beskrivelse">In nam tempor delectus, ea tempor intellegat voluptaria per. Vel dico etiam equidem ex, ex alia fierent appellantur eam. Et sed eripuit disputando. Commune facilisi reformidans usu ex, pro ad graecis adipisci consequat.</p>
+          </div>
+          <a href="#"><img src="assets/images/download.knap.png" class="img-download"></a>
         </div>
       </div>
     </div>
