opgave-forholdsord.html finish

--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -43,10 +43,10 @@
               0-2. Klasse
             </h1>
             <img src="assets/images/download.knap.png" class="downloadico">
-            Downloads
+            Downloads - 7
             <br />
             <img src="assets/images/kommentarer.png" class="kommentarerico">
-            Kommentarer
+            Kommentarer - 13 
           </div>
         </div>
         <div class="opgave-row2">
