--- a/forum.html
+++ b/forum.html
@@ -14,7 +14,7 @@
   </div>
     <nav>
       <ul>
-        <li><a href="index.html">Forside</a></li>  
+        <li><a href="index.html">Forside</a></li>
         <li class="active"><a href="forum.html">Forum</a></li>
         <li><a href="materialer.html">Materialer</a></li>
         <li><a href="opgaver.html">Opgaver</a></li>
@@ -72,6 +72,9 @@
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+          <p class="forum-pagenumber">
+            <a href="#"><b>1</b> 2 3</a>
+          </p>
          </div>
          <div class="forum-container">
            <h1 class="boks-titel">
@@ -101,6 +104,9 @@
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+          <p class="forum-pagenumber">
+            <a href="#"><b>1</b> 2 3 ... 5 <b></b>»</a>
+          </p>
          </div>
        </div>
        <div class="col-2">
@@ -132,6 +138,9 @@
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+          <p class="forum-pagenumber">
+            <a href="#"><b>1</b> 2 3 4 ... 6 <b></b>»</a>
+          </p>
          </div>
          <div class="forum-container">
            <h1 class="boks-titel">
@@ -161,6 +170,9 @@
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+          <p class="forum-pagenumber">
+            <a href="#"><b>1</b> 2 3 4 5 ... 8 <b></b>»</a>
+          </p>
          </div>
        </div>
      </div>
