--- a/materialer.html
+++ b/materialer.html
@@ -54,13 +54,13 @@
         </p>
       </div>
       <div class="kursus">
-        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <img src="assets/images/mand1.png" class="kursus-billede">
         <p class="kursus-beskrivelse">
           Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
         </p>
       </div>
       <div class="kursus">
-        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <img src="assets/images/mand2.png" class="kursus-billede">
         <p class="kursus-beskrivelse">
           Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
         </p>
