--- a/materialer.html
+++ b/materialer.html
@@ -73,33 +73,37 @@
       <section id="section-lektionsplaner">
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/001.jpg" class="lektionsplan-billede">
-        <p class="boks-hvidtekst">
-          Hej hej hej.
-        </p>
+        <h2 class="boks-hvidtekst">
+          Dansk
+        </h2>
+        <p class="p_materiale"><b>Klasse</b> 0-2 klasse</p>
+        <p class="p_materiale"><b>Downloads</b> 4 </p>
+        <p class="p_materiale"><b>Kommentarer</b> 7 </p>
+
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/002.jpg" class="lektionsplan-billede">
-        <p class="boks-hvidtekst">
-          Hej hej hej.
-        </p>
+        <h2 class="boks-hvidtekst">
+          Matematik
+        </h2>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/003.jpg" class="lektionsplan-billede">
-        <p class="boks-hvidtekst">
-          Hej hej hej.
-        </p>
+        <h2 class="boks-hvidtekst">
+          Engelsk
+        </h2>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/004.jpg" class="lektionsplan-billede">
-        <p class="boks-hvidtekst">
-          Hej hej hej.
-        </p>
+        <h2 class="boks-hvidtekst">
+          Kodning med KUBO
+        </h2>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/005.jpg" class="lektionsplan-billede">
-        <p class="boks-hvidtekst">
-          Hej hej hej.
-        </p>
+        <h2 class="boks-hvidtekst">
+          Kodning med KUBO
+        </h2>
       </div>
       </section>
       <section id="content">
