--- a/materialer.html
+++ b/materialer.html
@@ -58,7 +58,7 @@
       </div>
       <div class="kursus">
 
-        
+
         <h2>Førstehjælpskursus</h2>
 
         <img src="assets/images/mand1.png" class="kursus-billede">
@@ -90,8 +90,17 @@
           Dansk
         </h2>
         <p class="p_materiale"><b>Klasse</b> 0-2 klasse</p>
-        <p class="p_materiale"><b>Downloads</b> 4 </p>
-        <p class="p_materiale"><b>Kommentarer</b> 7 </p>  
+
+        <div class="download_div">
+          <p class="p_materiale"><b>Downloads</b> 4 </p>
+          <img class="download_buttom" src="assets/images/download.knap.png" alt="">
+        </div>
+        <div class="kommentarer_div">
+          <p class="p_materiale"><b>Kommentarer</b> 7 </p>
+          <img class="kommentarer_buttom" src="assets/images/kommentarer.png" alt="">
+        </div>
+
+
 
       </div>
       <div class="lektionsplan">
