--- a/signup.html
+++ b/signup.html
@@ -9,14 +9,14 @@
     <div id="container">
       <div id="logo"></div>
       <div id="input-container">
-        <form action="index.html">
+        <form action="signin.html">
         <input id="fornavn" type="text" placeholder="Fornavn" required>
         <input id="efternavn" type="text" placeholder="Efternavn" required>
         <input id="email" type="text" placeholder="E-mail" required>
         <input id="password" type="password" placeholder="Password" required>
         <input type="password" placeholder="Bekræft password" required>
         <a href="signin.html"><button class="button_left">Tilbage</button></a>
-        <input type="submit" value="Opret bruger" id="create">
+        <input type="submit" value="Opret bruger" id="create" onClick="saveInfo()">
       </form>
       </div>
     </div>
