--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -46,7 +46,7 @@
             Downloads - 7
             <br />
             <img src="assets/images/kommentarer.png" class="kommentarerico">
-            Kommentarer - 13 
+            Kommentarer - 13
           </div>
         </div>
         <div class="opgave-row2">
@@ -62,7 +62,7 @@
     </div>
      <footer>
        <div class="flex justify-center">
-         <div>
+         <div class="flytte2">
            <h2>Se også</h2> <br>
            <p class="footer_tekst">
              <p class="tekst_footer">Vores historie</p>
