--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -150,7 +150,7 @@
 
       <footer>
         <div class="flex justify-center">
-          <div>
+          <div class="flytte2">
             <h2>Se også</h2> <br>
             <p class="footer_tekst">
               <p class="tekst_footer">Vores historie</p>
