--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         </div>
       </div>
         </header>
+  <h1 class="boks-titel">Nyeste indlæg</h1>
   <div id="container">
     <div class="boks">
-      <h1 class="boks-titel">Nyeste indlæg</h1>
       <div class="boks-person">
         <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
         <h2>Johanne Hansen</h2>
@@ -119,7 +119,7 @@
     </div>
   <footer>
     <div class="flex justify-center">
-      <div>
+      <div class=flytte2>
         <h2>Se også</h2> <br>
         <p class="footer_tekst">
           <p class="tekst_footer">Vores historie</p>
@@ -135,6 +135,9 @@
           5220 Odense SØ <br>
           Tlf: 29 22 87 40 </p>
       </div>
+      <div class="scrolltop">
+        <img src="assets/images/scrolltop.png" alt="top" id="topscroll" onclick="scrollToTop();return false">
+      </div>
     </div>
     <div id="socialmedia">
       <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
@@ -144,5 +147,6 @@
       <a href="https://twitter.com/kubo_robot?lang=en" target="_blank" class="fa fa-twitter"></a>
     </div>
   </footer>
+  <script src="assets/js/javascript.js" charset="utf-8"></script>
 </body>
 </html>
