--- a/materialer.html
+++ b/materialer.html
@@ -180,7 +180,7 @@
   </div>
   <footer>
     <div class="flex justify-center">
-      <div>
+      <div class="flytte2">
         <h2>Se også</h2> <br>
         <p class="footer_tekst">
           <p class="tekst_footer">Vores historie</p>
