--- a/opgave-forholdsord.html
+++ b/opgave-forholdsord.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   <div class="logo_container">
-    <img src="assets/images/kedu_logo.png" class="logo" alt="">
+    <a href="index.html">
+    <img src="assets/images/kedu_logo.png" class="logo" alt="logo">
+    <a href="index.html"></a>
   </div>
     <nav>
       <ul>
