filter fix along with forum animations

--- a/forum-traad.html
+++ b/forum-traad.html
@@ -110,8 +110,7 @@
          </div>
        </div>
          <div id="post-kommentar">
-           <textarea id="tilfoej-kommentar">
-          </textarea>
+          <input id="tilfoej-kommentar" type="text" name="textValue" placeholder="tekst...">
           <button id="knap-tilfoejkommentar">Tilføj kommentar</button>
          </div>
      </div>
