--- a/forum.html
+++ b/forum.html
@@ -31,13 +31,14 @@
           <h1 id="page-title">
             Forum
           </h1>
-          <div class="choices">
-            <h2>Se alle</h2>
-            <div class="fa fa-caret-square-o-down">
+          <div class="filter_search">
+            <div class="filter">
+              <h2>Filter</h2>
+              <div class="fa fa-caret-square-o-down">
+              </div>
             </div>
-          </div>
-          <div class="search">
-            <h2>Søg</h2>
+            <input class="search" type="text" name="search" placeholder="   Søg">
+            </input>
           </div>
         </div>
     </header>
