--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
-                <h1 class="overskrift">Mangel du inspiration til undervisningen?</h1>
+                <h1 class="overskrift">Mangler du inspiration til undervisningen?</h1>
                 <p class="nyhedtekst">Har du ofte problemer med at finde på nye og spændene ideer til din undervisning? Vi har her 20 gode råd til dig!
 
                 </p>
