--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
         </header>
-  <h1 class="boks-titel">Nyeste indlæg</h1>
+  <h1 class="questionTitle">Nyeste indlæg</h1>
   <div id="container">
     <div class="boks">
       <div class="boks-person">
