--- a/minprofil.html
+++ b/minprofil.html
@@ -31,6 +31,12 @@
           <h1 id="page-title">
             Min profil
           </h1>
+          <div class="logout">
+            <h2>Log ud</h2>
+            <a href="signin.html">
+              <img src="assets/images/logout.png" alt="">
+            </a>
+          </div>
         </div>
     </header>
     <div id="wrapper">
