--- a/forum.html
+++ b/forum.html
@@ -45,20 +45,22 @@
      <div id="wrapper">
        <div class="col-1">
          <div class="forum-container">
-           <a href="forum-dansk.html">
+           <a href="forum-inspiration.html">
              <h1 class="boks-titel">
              Inspiration
             </h1>
           </a>
+          <a href="forum-traad.html">
           <div class="traad-container">
-            <a href="forum-traad.html"><h1 class="traad-titel">
+            <h1 class="traad-titel">
               Få leg og sjov ind i grammatikken!
             </h1>
-          </a>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+          </a>
+          <a href="forum-inspiration.html">
           <div class="traad-container">
             <h1 class="traad-titel">
               Sådan lærte jeg at håndtere mine elever.
@@ -67,6 +69,8 @@
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+        </a>
+        <a href="forum-inspiration.html">
           <div class="traad-container">
             <h1 class="traad-titel">
               En der har en god opgave med søjlediagrammer?
@@ -75,8 +79,9 @@
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
             </p>
           </div>
+        </a>
           <p class="forum-pagenumber">
-            <a href="#"><b>1</b> 2 3</a>
+            <a href="forum-inspiration.html"><b>1</b> 2 3</a>
           </p>
          </div>
          <div class="forum-container">
