--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <h1 class="questionTitle">Nyeste indlæg</h1>
   <div id="container">
     <div class="boks">
+      <a href="forum-traad.html">
       <div class="boks-person">
         <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
         <h2>Johanne Hansen</h2>
@@ -75,7 +76,8 @@
         <p class="beskrivelse">Jeg har virkelig svært ved at få mine elever til at  <br> lærer endelser. Er der en der har en god opgave de kan anbefale? Jeg er åben for de meste.... <br></p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
-
+      </a>
+      <a href="forum-traad.html">
       <div class="boks-person justify-boks">
         <img src="assets/images/mand1.png" alt="mand1" class="tilpas">
         <h2>Lars Andersen</h2>
@@ -83,7 +85,8 @@
         <p class="beskrivelse">Jeg skal lave et forløb med mine elever omking kodning. Jeg har aldrig undervist <br>i det før, så jeg ville blive rigtig glad hvis... <br> </p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
-
+    </a>
+      <a href="forum-traad.html">
       <div class="boks-person">
         <img src="assets/images/mand2.png" alt="mand1" class="tilpas">
         <h2>Mathias Schmidt</h2>
@@ -91,7 +94,8 @@
         <p class="beskrivelse">Jeg har igår lavet denne opgave med mine elever. <br> Det fungerede rigtitg godt, og derfor vil jeg gerne dele den med jer.  <br></p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
-
+    </a>
+        <a href="forum-traad.html">
       <div class="boks-person justify-boks">
         <img src="assets/images/unknown.png" alt="mand1" class="tilpas">
         <h2>Emil Olufsen</h2>
@@ -99,7 +103,8 @@
         <p class="beskrivelse">En kolega og jeg, diskutere hvorvidt der er rigtig eller forkert at bruge sådan en opgave som<br> denne? Jeg mener ikke den er relevant...<br></p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
-
+    </a>
+        <a href="forum-traad.html">
       <div class="boks-person">
         <img src="assets/images/dame2.png" alt="mand1" class="tilpas">
         <h2>Kathrine Mauritsen</h2>
@@ -107,7 +112,8 @@
         <p class="beskrivelse">Er der nogen her inde der har erfaring med at tage på kursus i tyskland?<br> <br></p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
-
+    </a>
+      <a href="forum-traad.html">
       <div class="boks-person justify-boks">
         <img src="assets/images/mand3.png" alt="mand1" class="tilpas">
         <h2>Olav Iversen</h2>
@@ -115,6 +121,7 @@
         <p class="beskrivelse">Jeg er normalt sproglærer. Men jeg skal være vikar i matematik imorgen. og jeg har ingen ide om.. <br><br></p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
+    </a>
       </div>
     </div>
   <footer>
@@ -135,9 +142,6 @@
           5220 Odense SØ <br>
           Tlf: 29 22 87 40 </p>
       </div>
-      <div class="scrolltop">
-        <img src="assets/images/scrolltop.png" alt="top" id="topscroll" onclick="scrollToTop();return false">
-      </div>
     </div>
     <div id="socialmedia">
       <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
@@ -145,6 +149,9 @@
       <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
       <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
       <a href="https://twitter.com/kubo_robot?lang=en" target="_blank" class="fa fa-twitter"></a>
+      <div class="scrolltop">
+        <img src="assets/images/scrolltop.png" alt="top" id="topscroll" onclick="scrollToTop();return false">
+    </div>
     </div>
   </footer>
   <script src="assets/js/javascript.js" charset="utf-8"></script>
