Fix af footer på alle sider

--- a/forum.html
+++ b/forum.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Forum - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/javascript.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="logo_container">
@@ -209,6 +210,9 @@
          <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
          <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
          <a href="https://twitter.com/kubo_robot?lang=en" target="_blank" class="fa fa-twitter"></a>
+         <div class="scrolltop">
+           <img src="assets/images/scrolltop.png" alt="top" id="topscroll" onclick="scrollToTop();return false">
+       </div>
        </div>
      </footer>
    </body>
