Links på breadcrumbs

--- a/forum-inspiration.html
+++ b/forum-inspiration.html
@@ -31,7 +31,7 @@
           <div id="header_container">
             <div id="header-cover">
               <h1 id="page-title">
-                Forum - Inspiration
+                <a href="forum.html">Forum</a> / <a href="forum-inspiration.html">Inspiration</a>
               </h1>
               <div class="choices">
                 <h2>Nyeste</h2>
