--- a/forum-traad.html
+++ b/forum-traad.html
@@ -30,7 +30,7 @@
       <div id="header_container">
         <div id="header-cover">
           <h1 id="page-title">
-            Forum / Dansk / Få leg og sjov ind i grammatikken!
+            <a href="forum.html">Forum</a> / <a href="forum-inspiration.html">Inspiration</a> / Få leg og sjov ind i grammatikken!
           </h1>
         </div>
     </header>
