--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -30,7 +30,7 @@
       <div id="header_container">
         <div id="header-cover">
           <h1 id="page-title">
-            Opgaver / Dansk / Retstavning
+            <a href="opgaver.html">Opgaver</a> / <a href="opgaver-dansk.html">Dansk</a> / Retstavning
           </h1>
           <div class="choices">
             <h2>Sorter</h2>
@@ -144,11 +144,7 @@
             </p>
             </a>
           </div>
-          <p class="forum-pagenumber">
-            <a href="#"><b>1</b> 2 3 ... 8 <b></b>»</a>
-          </p>
         </div>
-
       </div>
 
       <footer>
