--- a/opgaver-dansk.html
+++ b/opgaver-dansk.html
@@ -30,7 +30,7 @@
       <div id="header_container">
         <div id="header-cover">
           <h1 id="page-title">
-            Opgaver / Fag / Dansk
+            <a href="opgaver.html">Opgaver</a> / <a href="opgaver.html">Fag</a> / Dansk
           </h1>
           <img class="oploadbuttom" src="assets/images/opload.knap.png" alt="">
         </div>
