minprofil.html færdig

--- a/materialer.html
+++ b/materialer.html
@@ -39,47 +39,59 @@
         Kurser
       </h1>
       <div class="kursus">
+        <div class="materialer-col-1">
         <img src="assets/images/test.mand.png" class="kursus-billede">
-        <h2>Bliv en haj til KEDU!</h2>
+      </div>
+      <div class="materialer-col-2">
+        <h2 class="kursus-titel">Bliv en haj til KEDU</h2>
         <p class="kursus-beskrivelse">
-          Tag et online kursus om KEDU her.
+          Cras vel facilisis risus. In in commodo urna. Integer efficitur sollicitudin mattis.
         </p>
       </div>
+      </div>
       <div class="kursus">
+        <div class="materialer-col-1">
         <img src="assets/images/kursus2.png" class="kursus-billede">
-        <h2>Undervis med KUBO</h2>
+      </div>
+      <div class="materialer-col-2">
+        <h2 class="kursus-titel">Undervis med KUBO</h2>
         <p class="kursus-beskrivelse">
-          Lær at bruge KUBO i din undervisning.
+          Cras vel facilisis risus. In in commodo urna. Integer efficitur sollicitudin mattis.
         </p>
       </div>
+      </div>
       <div class="kursus">
+        <div class="materialer-col-1">
         <img src="assets/images/kursus3.png" class="kursus-billede">
-        <h2>Årsplaner</h2>
+      </div>
+      <div class="materialer-col-2">
+        <h2 class="kursus-titel">Årsplaner</h2>
         <p class="kursus-beskrivelse">
-          Lær at lave den perfekte årsplan.
+          Lær at lave den perfekte årsplan!
         </p>
       </div>
+      </div>
       <div class="kursus">
-
-
-        <h2>Førstehjælpskursus</h2>
-
+        <div class="materialer-col-1">
         <img src="assets/images/mand1.png" class="kursus-billede">
-
+      </div>
+      <div class="materialer-col-2">
+        <h2 class="kursus-titel">Førstehjælpskursus</h2>
         <p class="kursus-beskrivelse">
-          Ved du hvad du skal gære hvis der sker en ulykke?
+          Ved du hvad du skal foretage dig midt i en ulykke?
         </p>
       </div>
+      </div>
       <div class="kursus">
-
-
-        <h2>Teambuilding og kanotur</h2>
-
+        <div class="materialer-col-1">
         <img src="assets/images/mand2.png" class="kursus-billede">
-
+      </div>
+      <div class="materialer-col-2">
+        <h2 class="kursus-titel">Teambuilding og kanotur</h2>
         <p class="kursus-beskrivelse">
           Bliv rystet sammen, og nyd den skønne natur på samme tid.
         </p>
+      </div>
       </div>
     </aside>
     <div id="col-2">
@@ -89,46 +101,78 @@
       <section id="section-lektionsplaner">
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/001.jpg" class="lektionsplan-billede">
-        <h2 class="boks-hvidtekst">
+        <h2 class="lektionsplan-titel">
           Dansk
         </h2>
-        <p class="p_materiale"><b>Klasse</b> 0-2 klasse</p>
-
-        <div class="download_div">
-          <p class="p_materiale"><b>Downloads</b> 4 </p>
-          <img class="download_buttom" src="assets/images/download.knap.png" alt="">
-        </div>
-        <div class="kommentarer_div">
-          <p class="p_materiale"><b>Kommentarer</b> 7 </p>
-          <img class="kommentarer_buttom" src="assets/images/kommentarer.png" alt="">
-        </div>
-
-
-
+        <p class="lektionsplan-beskrivelse">
+          Klasse 0-2
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+        </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/002.jpg" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Matematik
         </h2>
+        <p class="lektionsplan-beskrivelse">
+          Klasse 0-2
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+        </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/003.jpg" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Engelsk
         </h2>
+        <p class="lektionsplan-beskrivelse">
+          Klasse 0-2
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+        </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/004.jpg" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Kodning med KUBO
         </h2>
+        <p class="lektionsplan-beskrivelse">
+          Klasse 0-2
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+        </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/005.jpg" class="lektionsplan-billede">
         <h2 class="boks-hvidtekst">
           Kodning med KUBO
         </h2>
+        <p class="lektionsplan-beskrivelse">
+          Klasse 0-2
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Downloads - 8 <img src="assets/images/download.knap.png" class="kommentarerico">
+        </p>
+        <p class="lektionsplan-beskrivelse">
+          Kommentarer - 11 <img src="assets/images/kommentarer.png" class="downloadico">
+        </p>
       </div>
       </section>
       <section id="content">
